fix z-index for old android

--- a/src/main/webapp/static/css/layout-mobile.css
+++ b/src/main/webapp/static/css/layout-mobile.css
@@ -13,6 +13,7 @@ body {
 	height: 50px;
 	width: 100%;
 	background-color: #ccc;
+	z-index: 90;
 }
 
 .top .header {
